--- a/index.html
+++ b/index.html
@@ -6,16 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jermaine</title>
     <link rel="stylesheet" href="static/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
         <h1>I'm Jermaine Watts</h1>
         <h2>Sober, Fit, and Thriving</h2>
     </div>
+    <div class="pix">
+        <img class="pic" src="static/img/rainbowjermaine.jpg" alt="Jermainebow">
+        <img class="picsmall" src="static/img/jermaine.jpg" alt="closeup">
+        <img class="picsmall" src="static/img/change.jpg" alt="closeup">
+        <img class="picsmall" src="static/img/change2.jpg" alt="closeup2">
+    </div>
+        <div class="little">
+            818 270 0489
+        </div>
+        <div class="little">
+            mrjermainewatts.jw@gmail.com
+        </div>
+
+    
+    <div class="complement">
+
+    </div>
     <div class="whitebox">
         <p>
-            Hi, my name is Jermaine and I have 9 years of continuous sobriety. I have a passion for working with addicts and alcoholics in the field of recovery. I’ve gained a working knowledge of the 12 steps as well as other programs of recovery. I also have a deep love for philosophy and personal development. It has become my purpose in life to help others achieve sobriety and establish a new way of life through spirituality and sobriety. My goal is to lead by example and show others that recovery is possible.  I myself was a deeply troubled person so I truly understand the struggles of dealing with drug addiction, family dysfunction and mental illness. Having overcome tremendous difficulties in my own life, it's become my life purpose to help others overcome their difficulties, find their own purpose, live a life of inner freedom, peace and prosperity. I’ve spent many years working with adult addicts and Alcoholics in residential treatment centers as well as IOP's. I've made the transition to working with teens and families. It's been a very rewarding and fulfilling process. Helping the people realize their infinite potential for unlimited growth is something money can’t buy, you can’t simply read about, it's something that you can only experience through selfless dedication to recovery and a deep belief that every human has infinite potential for good.  I'm also a certified drug and alcohol counselor. I specialize in overcoming addiction and alcoholism. I also believe in holistic healing as well as physical fitness, mind body and spirit. It's been my pleasure to help others find a deeper understanding of who they truly are. My mission is to offer support and lead by example, offering a new way of life for those who may have lost their way. I’m merely a guide to help people reconnect with themselves, heal those inner wounds and find a new way to live free from alcoholism, addiction and self-harming behaviors. 
+            Hi, my name is Jermaine and I have 9 years of continuous sobriety. I have a passion for working with addicts and alcoholics in the field of recovery. I’ve gained a working knowledge of the 12 steps as well as other programs of recovery. I also have a deep love for philosophy and personal development. It has become my purpose in life to help others achieve sobriety and establish a new way of life through spirituality and sobriety. My goal is to lead by example and show others that recovery is possible.  I myself was a deeply troubled person so I truly understand the struggles of dealing with drug addiction, family dysfunction and mental illness.
         </p>
+        <p>
+            Having overcome tremendous difficulties in my own life, it's become my life purpose to help others overcome their difficulties, find their own purpose, and live a life of inner freedom, peace and prosperity.
+        </p>
+        <p>
+            I’ve spent many years working with adult addicts and Alcoholics in residential treatment centers as well as IOP's. I've made the transition to working with teens and families. It's been a very rewarding and fulfilling process. Helping the people realize their infinite potential for unlimited growth is something money can’t buy, you can’t simply read about, it's something that you can only experience through selfless dedication to recovery and a deep belief that every human has infinite potential for good.  
+        </p>    
+        <p>
+            I'm also a certified drug and alcohol counselor. I specialize in overcoming addiction and alcoholism. I also believe in holistic healing as well as physical fitness, mind body and spirit. It's been my pleasure to help others find a deeper understanding of who they truly are. My mission is to offer support and lead by example, offering a new way of life for those who may have lost their way. I’m merely a guide to help people reconnect with themselves, heal those inner wounds and find a new way to live free from alcoholism, addiction and self-harming behaviors. 
+        </p>
+    </div>
+    <div class="pdf">
+        <img class="pic" src="static/img/pdf.png" alt="pdf">
+    </div>
+    <div class="footer">
+        <a target="_blank" href="https://maxjann.com">
+        <img class="picverysmall" src="static/img/biz.png" alt="mj">
+        Jann Software
+        </a>
+        
     </div>
 </body>
 </html>
