--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="header">
         <h1>I'm Jermaine Watts</h1>
-        <h2>Sober, Fit, and Thriving</h2>
+        <h2>Sober Companion</h2>
     </div>
     <div class="pix">
         <img class="pic" src="static/img/rainbowjermaine.jpg" alt="Jermainebow">
@@ -22,7 +22,7 @@
         <img class="picsmall" src="static/img/change2.jpg" alt="closeup2">
     </div>
         <div class="little">
-            818 270 0489
+            818 270 0489 &nbsp;
         </div>
         <div class="little">
             mrjermainewatts.jw@gmail.com
